# omnipath

./: 404.html  Cargo.toml  Details.html  Filesystems.html  NT.html  Overview.html  README.md  Special Dos Device Names.html  Strings.html  Win32.html  index.html  print.html  rustfmt.toml  searchindex.js  searchindex.json
.github/: FUNDING.yml
.github/workflows/: book.yml  ci.yml
crates/omnipath/: Cargo.toml  README.md
crates/omnipath/examples/: pure.rs  replace_range.rs  windows.rs
crates/omnipath/src/: lib.rs  posix.rs  pure.rs  raw.rs  util.rs  windows.rs
crates/omnipath/src/windows/: kind.rs  sys.rs
crates/testing/: Cargo.toml  README.md
crates/testing/tests/: kinds.rs  paths.rs
docs/: NOTES.md  book.toml
docs/src/: Details.md  Filesystems.md  NT.md  Overview.md  SUMMARY.md  Special Dos Device Names.md  Strings.md  Win32.md
