[package]
name = "omnipath"
description = "Path utlity library"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["windows", "absolute"]
categories = ["filesystem"]
repository = "https://github.com/ChrisDenton/omnipath"

[features]
default = ["std"]
std = []

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
